10.3 fix login input align center

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -350,6 +350,7 @@ table.a {
     height: 20px;
     border: solid #52c6d2;
     border-radius: 10px;
+    text-align: center;
 }
 
 .registration:focus {
@@ -360,6 +361,9 @@ table.a {
     animation-duration: 0.7s;
 }
 
+#email-input {
+    text-align: center;
+}
 @keyframes border_animation {
     from {border-color: #52c6d2;}
     to {border-color: #F68A07FF;}
